superset-postgersql-hl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-postgresql-hl
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: superset
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.1.6
    service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
  annotations:
    meta.helm.sh/release-name: superset
    meta.helm.sh/release-namespace: apache-superset
  selfLink: /api/v1/namespaces/apache-superset/services/superset-postgresql-hl
status:
  loadBalancer: {}
spec:
  ports:
    - name: tcp-postgresql
      protocol: TCP
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: superset
    app.kubernetes.io/name: postgresql
  clusterIP: None
  clusterIPs:
    - None
  type: ClusterIP
  sessionAffinity: None
  publishNotReadyAddresses: true
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
