superset-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-postgresql
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: superset
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.1.6
  annotations:
    meta.helm.sh/release-name: superset
    meta.helm.sh/release-namespace: apache-superset
status:
  loadBalancer: {}
spec:
  ports:
    - name: tcp-postgresql
      protocol: TCP
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: superset
    app.kubernetes.io/name: postgresql
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
