superset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset
  labels:
    app: superset
    app.kubernetes.io/managed-by: Helm
    chart: superset-0.9.3
    heritage: Helm
    release: superset
  annotations:
    meta.helm.sh/release-name: superset
    meta.helm.sh/release-namespace: apache-superset
status:
  loadBalancer: {}
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8088
      targetPort: http
  selector:
    app: superset
    release: superset
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
